changed file name

--- a/Engine/Source/Programs/PixelStreaming/WebServers/SignallingWebServer/config.json
+++ b/Engine/Source/Programs/PixelStreaming/WebServers/SignallingWebServer/config.json
@@ -18,6 +18,6 @@
 	"httpPort": 80,
 	"httpsPort": 443,
 	"streamerPort": 8888,
-	"unrealAppName": "PixelStreamingDemo",
+	"unrealAppName": "MetaHumans2",
 	"region": ""
 }
