--- a/PixelStreamingDemo/Saved/Config/WindowsNoEditor/GameUserSettings.ini
+++ b/PixelStreamingDemo/Saved/Config/WindowsNoEditor/GameUserSettings.ini
@@ -39,5 +39,5 @@ bUseHDRDisplayOutput=False
 HDRDisplayOutputNits=1000
 
 [ShaderPipelineCache.CacheFile]
-LastOpened=PixelStreamingDemo
+LastOpened=MetaHumans2
 
